# mcp-http-to-stdio

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  claude_desktop_config.example.json  pyproject.toml
mcp_http_to_stdio/: __init__.py  __main__.py  bridge.py
